fixed centered but left-aligned

--- a/src/scss/components/_call.scss
+++ b/src/scss/components/_call.scss
@@ -12,7 +12,7 @@
   @include media-breakpoint-up(sm) {
     align-items: center;
     flex-direction: row;
-    width: 90%;
+    width: 70%;
   }
   @include media-breakpoint-up(md) {
     width: 70%;
